<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SingleRowStyleActivity">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/app_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/hide_folder_path">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/hide_folder_path"
                    android:padding="15dp"
                    />
                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="20dp"
                    android:checked="false"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/hide_folder_dateTime_info">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="Hide Folder Date Time Info"
                    android:padding="15dp"
                    />
                <Switch
                    android:id="@+id/switch5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="20dp"
                    android:checked="false"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/hide_date_time_info">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/hide_file_date_time_info"
                    android:padding="15dp"
                    />
                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="20dp"
                    android:checked="false"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/hide_file_size">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/hide_file_size"
                    android:padding="15dp"
                    />
                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="20dp"
                    android:checked="false"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>




        </LinearLayout>
    </ScrollView>





</LinearLayout>